public class Bond extends FinancialAsset{
  private double faceValue;
  private double coupon;
